Fix FlipCard display and overlap issues
Fixes the display of the front face of the cards in the Flip the Script activity and resolves overlapping issues on the welcome page.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -42,6 +41,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   animation-delay: -4s;
+}
+
+/* Card flipping styles */
+.perspective-[1000px] {
+  perspective: 1000px;
+}
+
+.transform-style-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 /* Fun Emoji Animation */
